dim/spec/test_input/invalid_input/modules/unallowed_attribute.dim
document: test_module

test_id_1:
  text: First test requirement
  test: Invalid key